tests/paczka1/small_fuzzy/75465589.err
Error in line 2: eHBvFUs7kn S17 69,44
Error in line 5: eHBvFUs7kn S17 51,0
Error in line 7: eHBvFUs7kn S448 85,6
